# silkpre

./: .gitmodules  CMakeLists.txt
lib/: CMakeLists.txt
lib/silkpre/: precompile.cpp
test/: CMakeLists.txt  benchmark.cpp
